examples/test/testpolicy9002.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9002
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key27: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value46
          key16: value31
          key35: value4
      podSelector:
        matchLabels:
          key38: value21
          key47: value15
